[package]
name = "sol-strategy-blockchain"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.14.16"
thiserror = "1.0.40"
borsh = "0.9.3"
borsh-derive = "0.9.3"

[dev-dependencies]
solana-program-test = "1.14.16"
solana-sdk = "1.14.16"

[lib]
crate-type = ["cdylib", "lib"]